--- a/mavs.html
+++ b/mavs.html
@@ -23,12 +23,15 @@
             Robots</span></h2>
         <br>
         <hr> <span  style="color: rgb(255, 255, 255); font-weight: bold;"><span
-             style="font-family: LTAroma;"><a  style="color: rgb(255, 255, 255);"
-               href="/home/kabir/artemis_web/mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
-            |&nbsp;&nbsp;&nbsp; Technical&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp;
-            People&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Gallery&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Videos&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Contact Us</span></span>
+             style="font-family: LTAroma;"></span></span><span  style="color: rgb(255, 255, 255);"><span
+             style="font-family: LTAroma;"><span  style="font-weight: bold;"><a
+                 href="file:///home/kabir/artemis_web/mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/technical.html">
+                Technical</a>&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/people.html">
+                People</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/gallery.html">
+                Gallery</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Publications
+              &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; </span><span  style="font-weight: bold;"><a
+                 href="file:///home/kabir/artemis_web/contact.html">Contact Us</a></span></span></span><br>
         <p><a  href="https://github.com/ProjectArtemis"  class="button"><small>Follow
               me on</small> GitHub</a></p>
       </div>
