--- a/mavs.html
+++ b/mavs.html
@@ -22,16 +22,17 @@
         <h2><span  style="font-family: LTAroma;">Visual Navigation for Flying
             Robots</span></h2>
         <br>
-        <hr> <span  style="color: rgb(255, 255, 255); font-weight: bold;"><span
-             style="font-family: LTAroma;"></span></span><span  style="color: rgb(255, 255, 255);"><span
-             style="font-family: LTAroma;"><span  style="font-weight: bold;"><a
-                 href="file:///home/kabir/artemis_web/mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
-              |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/technical.html">
-                Technical</a>&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/people.html">
-                People</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; <a  href="file:///home/kabir/artemis_web/gallery.html">
-                Gallery</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Publications
-              &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; </span><span  style="font-weight: bold;"><a
-                 href="file:///home/kabir/artemis_web/contact.html">Contact Us</a></span></span></span><br>
+        <hr><span  style="color: rgb(255, 255, 255);"><span  style="font-family: LTAroma;">
+            <span  style="font-weight: bold;"><a  href="mavs.html">Our
+                MAVs</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
+              <a  href="technical.html"> Technical</a>&nbsp;&nbsp; &nbsp;
+              |&nbsp;&nbsp;&nbsp;
+              <a  href="people.html"> People</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp;
+              <a  href="gallery.html"> Gallery</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; Publications &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
+            </span><span  style="font-weight: bold;"><a  href="contact.html">Contact
+        Us</a></span></span></span>
         <p><a  href="https://github.com/ProjectArtemis"  class="button"><small>Follow
               me on</small> GitHub</a></p>
       </div>
@@ -48,7 +49,7 @@
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
           <p>MAV1 was the first Artemis series vehicle to carry Intel x86
             computing onboard. It was powered by an Intel Core i5 NUC. </p>
-          <img  alt=""  src="file:///home/kabir/artemis_web/images/content/mav1.jpg">
+          <img  alt=""  src="images/content/mav1.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV
               X</span></h2>
           MAV X was the very first among the Artemis MAVs. It had standard
