--- a/mavs.html
+++ b/mavs.html
@@ -46,6 +46,7 @@
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102);">MAV2</span></h2>
           <p>MAV2 is the current-generation development prototype. It carries an
             Intel Core i7 Skylake-series NUC.</p>
+          <img  alt=""  src="images/content/mav2.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
           <p>MAV1 was the first Artemis series vehicle to carry Intel x86
             computing onboard. It was powered by an Intel Core i5 NUC. </p>
