--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             Robots</span></h2>
         <br>
         <hr><span  style="color: rgb(255, 255, 255);"><span  style="font-family: LTAroma;">
-            <span  style="font-weight: bold;"><a  href="mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
-              |&nbsp;&nbsp;&nbsp;
-              <a  href="technical.html"> Technical</a>&nbsp;&nbsp; &nbsp;
-              |&nbsp;&nbsp;&nbsp;
-              <a  href="people.html"> People</a>&nbsp;&nbsp;&nbsp;
-              |&nbsp;&nbsp;&nbsp;
-              <a  href="gallery.html"> Gallery</a>&nbsp;&nbsp;&nbsp;
-              |&nbsp;&nbsp;&nbsp; Publications &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            </span><span  style="font-weight: bold;"><a  href="contact.html">Contact
-                Us</a></span></span></span>
+            <span  style="font-weight: bold;"><a  style="color: rgb(255, 255, 255);"
+                 href="mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="technical.html">
+                Technical</a>&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"
+                 href="people.html"> People</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="gallery.html">
+                Gallery</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Publications
+              &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; </span><span  style="font-weight: bold;"><a
+                 href="contact.html"><span  style="color: rgb(255, 255, 255);">Contact
+                  Us</span> &nbsp;&nbsp;&nbsp;</a></span></span></span>
         <p><a  href="https://github.com/ProjectArtemis"  class="button"><small>Follow
               me on</small> GitHub</a></p>
       </div>
