--- a/mavs.html
+++ b/mavs.html
@@ -45,17 +45,52 @@
           <h1> <span  style="font-family: LTAroma;">Our MAVs</span></h1>
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102);">MAV2</span></h2>
           <p>MAV2 is the current-generation development prototype. It carries an
-            Intel Core i7 Skylake-series NUC.</p>
-          <img  alt=""  src="images/content/mav2.jpg">
+            Intel Core i7 Skylake-series computer. The system purges all other
+            deprecated interfaces, and uses only CAN-bus and the UAVCAN protocol
+            for all onboard intra-modular communication. It is also much smaller
+            than the previous MAV1, and can safely fly inside a stairwell.</p>
+          <p  style="height: 116px;"><strong>Computation : </strong>Intel Core
+            i7 board <br>
+            <strong>Autopilot :</strong> Pixhack (Pixhawk derivative with
+            internally-dampened IMU)<br>
+            <strong>GNSS :</strong> Zubax GNSS v2<br>
+            <strong>Communications :</strong> Ubiquiti Rocket M5 (long range,
+            upto 5 km)<br>
+            <strong>Cameras : </strong>1 x PX4Flow, 2 x IDS uEye SE (stereo
+            configuration)<strong> , </strong>1 x<strong> </strong>PointGrey
+            FireFly-MV USB (bottom facing) <strong><br>
+            </strong> <strong>Rangefinder :</strong> Lidar-Lite v1&nbsp;</p>
+          <p  style="height: 17px;"><br>
+          </p>
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
           <p>MAV1 was the first Artemis series vehicle to carry Intel x86
-            computing onboard. It was powered by an Intel Core i5 NUC. </p>
+            computing onboard. It is powered by an Intel Core i5 NUC. We started
+            testing out our stereo-vision based mapping and obstacle avoidance
+            system on this platform<strong>.<br>
+            </strong></p>
+          <p><strong>Computation : </strong>Intel Core i5 NUC (This is the same
+            computer that <a  href="http://www.swissfang.ch/">Team Swissfang</a>
+            used in their 2014 OBC entry!)<br>
+            <strong>Autopilot :</strong> Pixhawk<br>
+            <strong>GNSS :</strong> Zubax GNSS v1<br>
+            <strong>Communications :</strong> Ubiquiti Rocket M5 (long range,
+            upto 5 km)<br>
+            <strong>Cameras : </strong>2 x<strong> </strong>PointGrey
+            FireFly-MV USB (stereo configuration)</p>
           <img  alt=""  src="images/content/mav1.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV
               X</span></h2>
           MAV X was the very first among the Artemis MAVs. It had standard
           propulsion system, and carried an Odroid U3 and a Pixhawk autopilot
-          board.<br>
+          board. We first demonstrated GPS-denied positioning with a combination
+          of optical flow and active monocular vision on this platform.<br>
+          <br>
+          <strong>Computation : </strong>Odroid U3<br>
+          <strong>Autopilot :</strong> Pixhawk<br>
+          <strong>GNSS :</strong> None<br>
+          <strong>Communications :</strong> Wireless 802.11AC (short range)<br>
+          <strong>Cameras : </strong>PX4Flow<strong>, </strong>PointGrey
+          FireFly-MV USB (bottom facing)<br>
           <br>
           <img  alt=""  src="images/content/mavX.jpg"><br>
           <br>
