--- a/technical.html
+++ b/technical.html
@@ -22,13 +22,17 @@
         <h2><span  style="font-family: LTAroma;">Visual Navigation for Flying
             Robots</span></h2>
         <br>
-        <hr> <span  style="color: rgb(255, 255, 255); font-weight: bold;"><span
-             style="font-family: LTAroma;"><a  style="color: rgb(255, 255, 255);"
-               href="/home/kabir/artemis_web/mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
-            |&nbsp;&nbsp;&nbsp; Technical&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp;
-            People&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Gallery&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Videos&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Contact Us</span></span>
+        <hr><span  style="color: rgb(255, 255, 255);"><span  style="font-family: LTAroma;">
+            <span  style="font-weight: bold;"><a  style="color: rgb(255, 255, 255);"
+                 href="mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="technical.html">
+                Technical</a>&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"
+                 href="people.html"> People</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="gallery.html">
+                Gallery</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Publications
+              &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; </span><span  style="font-weight: bold;"><a
+                 href="contact.html"><span  style="color: rgb(255, 255, 255);">Contact
+                  Us</span> &nbsp;&nbsp;&nbsp;</a></span></span></span>
         <p><a  href="https://github.com/ProjectArtemis"  class="button"><small>Follow
               me on</small> GitHub</a></p>
       </div>
@@ -38,21 +42,54 @@
       <div  class="inner clearfix">
         <h1> </h1>
         <section  id="main-content">
-          <h1> <span  style="font-family: LTAroma;">Our MAVs</span></h1>
-          <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102);">MAV2</span></h2>
-          <p>MAV2 is the current-generation development prototype. It carries an
-            Intel Core i7 Skylake-series NUC.</p>
-          <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
-          <p>MAV1 was the first Artemis series vehicle to carry Intel x86
-            computing onboard. It was powered by an Intel Core i5 NUC. </p>
-          <img  alt=""  src="file:///home/kabir/artemis_web/images/content/mav1.jpg">
-          <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV
-              X</span></h2>
-          MAV X was the very first among the Artemis MAVs. It had standard
-          propulsion system, and carried an Odroid U3 and a Pixhawk autopilot
-          board.<br>
+          <h1><span  style="font-family: LTAroma;">Technical<br>
+            </span></h1>
+          <p><span  style="font-family: LTAroma;"><span  style="font-weight: bold;">All
+                of the Artemis MAVs follow the same basic, distributed&nbsp;
+                system architecture. There is a high-level onboard computer, and
+                a low-level embedded flight controller, typically a PX4
+                autopilot board, or similar derivative. The middleware of choice
+                on the high-level companion computer is ROS (Robot Operating
+                System) and the PX4 Middleware on the deeply embedded
+                controller.</span></span></p>
+          <p><br>
+          </p>
+          <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Hardware</span></h2>
+          <p></p>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Computing</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Vision</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Flight
+              Control<br>
+            </span></h3>
+          <p><br>
+          </p>
+          <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Software</span></h2>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">State
+              Estimation</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Visual
+              Navigation</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Mapping</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Terrain
+              Analysis</span></h3>
+          <img  alt=""  src="images/gallery/mapping.png">
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Obstacle
+              Avoidance</span></h3>
+          <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Trajectory
+              Control</span></h3>
+          <p><br>
+          </p>
+          <p><br>
+          </p>
+          <p><br>
+          </p>
+          <p><br>
+          </p>
+          <p><br>
+          </p>
+          <p><br>
+          </p>
           <br>
-          <img  alt=""  src="images/content/mavX.jpg"><br>
+          <br>
           <br>
           <br>
           <p><br>
