--- a/gallery.html
+++ b/gallery.html
@@ -16,25 +16,31 @@
     <title>Project Artemis</title>
   </head>
   <body>
-    <header>
+   <header>
       <div  style="height: 181px;"  class="inner">
-        <h1><span  style="font-family: LTAroma;">Project Artemis</span></h1>
+        <h1><span  style="color: rgb(255, 255, 255);"><a  href="index.html"><span
+                 style="font-family: LTAroma; color: rgb(255, 255, 255)">Project
+                Artemis</span></a></span></h1>
         <h2><span  style="font-family: LTAroma;">Visual Navigation for Flying
             Robots</span></h2>
         <br>
-        <hr> <span  style="color: rgb(255, 255, 255); font-weight: bold;"><span
-             style="font-family: LTAroma;"><a  style="color: rgb(255, 255, 255);"
-               href="/home/kabir/artemis_web/mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
-            |&nbsp;&nbsp;&nbsp; Technical&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp;
-            People&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Gallery&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;
-            Videos&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Contact Us</span></span>
+        <hr><span  style="color: rgb(255, 255, 255);"><span  style="font-family: LTAroma;">
+            <span  style="font-weight: bold;"><a  style="color: rgb(255, 255, 255);"
+                 href="mavs.html">Our MAVs</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="technical.html">
+                Technical</a>&nbsp;&nbsp; &nbsp; |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"
+                 href="people.html"> People</a>&nbsp;&nbsp;&nbsp;
+              |&nbsp;&nbsp;&nbsp; <a  style="color: rgb(255, 255, 255);"  href="gallery.html">
+                Gallery</a>&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; Publications
+              &nbsp;&nbsp; |&nbsp;&nbsp;&nbsp; </span><span  style="font-weight: bold;"><a
+                 href="contact.html"><span  style="color: rgb(255, 255, 255);">Contact
+                  Us</span> &nbsp;&nbsp;&nbsp;</a></span></span></span>
         <p><a  href="https://github.com/ProjectArtemis"  class="button"><small>Follow
               me on</small> GitHub</a></p>
       </div>
     </header>
     <br>
-    <div>
+    <div> 
       <div  class="inner clearfix">
         <h1> </h1>
         <section  id="main-content">
