--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div  style="height: 181px;"  class="inner">
-        <h1><span  style="font-family: LTAroma;">Project Artemis</span></h1>
+        <h1><span  style="color: rgb(255, 255, 255);"><a  href="index.html"><span
+                 style="font-family: LTAroma; color: rgb(255, 255, 255)">Project
+                Artemis</span></a></span></h1>
         <h2><span  style="font-family: LTAroma;">Visual Navigation for Flying
             Robots</span></h2>
         <br>
@@ -83,5 +85,6 @@
         </aside>
       </div>
     </div>
+    
   </body>
 </html>
