--- a/people.html
+++ b/people.html
@@ -45,23 +45,15 @@
       <div  class="inner clearfix">
         <h1> </h1>
         <section  id="main-content">
-          <h1><span  style="font-family: LTAroma;">Contact Us</span></h1>
+          <h1><span  style="font-family: LTAroma;">People</span></h1>
           <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">Mohammed
                 Kabir</span></span></h2>
           <br>
-          <span  style="font-family: LTAroma;"><strong>Email : </strong>mhkabir98@gmail.com<br>
-            <strong>Skype :</strong> kabiriris<span  style="font-weight: bold;"><br>
-              Github :<strong> </strong></span><strong></strong>www.github.com/mhkabir<span
-               style="font-weight: bold;"><br>
-              <br>
-            </span></span>
-          <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">Jonathan
-                Parrot<br>
-              </span></span></h2>
-          <br>
+          <img  alt=""  src="images/content/kabir.jpg"> <br>
         </section>
       </div>
     </div>
     <span  style="font-family: LTAroma;"> </span>
+    
   </body>
 </html>
