--- a/technical.html
+++ b/technical.html
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div  style="height: 181px;"  class="inner">
-        <h1><span  style="font-family: LTAroma;">Project Artemis</span></h1>
+        <h1><span  style="color: rgb(255, 255, 255);"><a  href="index.html"><span
+                 style="font-family: LTAroma; color: rgb(255, 255, 255)">Project
+                Artemis</span></a></span></h1>
         <h2><span  style="font-family: LTAroma;">Visual Navigation for Flying
             Robots</span></h2>
         <br>
@@ -44,19 +46,20 @@
         <section  id="main-content">
           <h1><span  style="font-family: LTAroma;">Technical<br>
             </span></h1>
-          <p><span  style="font-family: LTAroma;"><span  style="font-weight: bold;">All
-                of the Artemis MAVs follow the same basic, distributed&nbsp;
-                system architecture. There is a high-level onboard computer, and
-                a low-level embedded flight controller, typically a PX4
-                autopilot board, or similar derivative. The middleware of choice
-                on the high-level companion computer is ROS (Robot Operating
-                System) and the PX4 Middleware on the deeply embedded
-                controller.</span></span></p>
+          <p><span  style="font-family: LTAroma;">All of the Artemis MAVs follow
+              the same basic, distributed&nbsp; system architecture. There is a
+              high-level onboard computer, and a low-level embedded flight
+              controller, typically a PX4 autopilot board, or similar
+              derivative. The middleware of choice on the high-level companion
+              computer is ROS (Robot Operating System) and the PX4 Middleware on
+              the deeply embedded controller.</span></p>
           <p><br>
           </p>
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Hardware</span></h2>
-          <p></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Computing</span></h3>
+          <p><span  style="font-family: LTAroma;">We have tested several onboard
+              computing solutions, with varying <br>
+            </span></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Vision</span></h3>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Flight
               Control<br>
