--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
     <title>Project Artemis</title>
   </head>
   <body>
-   <header>
+    <header>
       <div  style="height: 181px;"  class="inner">
         <h1><span  style="color: rgb(255, 255, 255);"><a  href="index.html"><span
                  style="font-family: LTAroma; color: rgb(255, 255, 255)">Project
@@ -40,11 +40,11 @@
       </div>
     </header>
     <br>
-    <div> 
+    <div>
       <div  class="inner clearfix">
         <h1> </h1>
         <section  id="main-content">
-          <h1> <span  style="font-family: LTAroma;">Our MAVs</span></h1>
+          <h1><span  style="font-family: LTAroma;">Gallery</span></h1>
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102);">MAV2</span></h2>
           <p>MAV2 is the current-generation development prototype. It carries an
             Intel Core i7 Skylake-series NUC.</p>
