--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               of these systems make it a further challenge to find the best
               balance of sensors and computing systems while maintaining a high
               level of system agility for navigation. We target the fields of
-              Urban Search and Rescue (USAR) and 3D mapping for deployment of
-              our system. We chose a quadrotor for our test platform, due to
+              Urban Search and Rescue (USAR) and 3D mapping for deployment
+              of our system. We chose a quadrotor for our test platform, due to
               their cost-effectiveness and agility.The goal of the system is to
               be rapidly deployable, capable of operating with or without a
               human operator at the controls, and capable of mapping out
@@ -85,6 +85,5 @@
         </aside>
       </div>
     </div>
-    
   </body>
 </html>
