--- a/mavs.html
+++ b/mavs.html
@@ -45,6 +45,25 @@
         <h1> </h1>
         <section  id="main-content">
           <h1><span  style="font-family: LTAroma;">Our MAVs</span></h1>
+          <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">MAV3</span></span></h2>
+          <p><span  style="font-family: LTAroma;">MAV3 is the current
+              bleeding-edge experimental platform for testing of Qualcomm
+              Snapdragon hardware for flight control and higher-level functions.
+              The MAV is a 250-sized quadrotor, and can be comfortably flown
+              indoors.<span  style="font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,serif;"><br>
+              </span></span></p>
+          <p  style="height: 116px;"><span  style="font-family: LTAroma;"><strong>Computation
+                and Autopilot : </strong></span><span  style="font-family: LTAroma;">Snapdragon
+              Flight<br>
+            </span> <span  style="font-family: LTAroma;"><strong>GNSS :</strong>
+            </span><span  style="font-family: LTAroma;">
+              <meta  http-equiv="content-type"  content="text/html; charset=utf-8">
+              Telit Jupiter SE868 v2 <em>(Integrated)</em><br>
+            </span> <span  style="font-family: LTAroma;"><strong>Communications
+                :</strong> Qualcomm VIVE MIMO 802.11n/ac <em>(Integrated)</em><br>
+            </span> <span  style="font-family: LTAroma;"><strong>Cameras : </strong><em>(Integrated)</em></span><br>
+            <meta  http-equiv="content-type"  content="text/html; charset=utf-8">
+          </p>
           <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">MAV2</span></span></h2>
           <p><span  style="font-family: LTAroma;">MAV2 is the current-generation
               development prototype. It carries an Intel Core i7 Skylake-series
@@ -63,8 +82,9 @@
             </span> <span  style="font-family: LTAroma;"><strong>Cameras : </strong>1
               x PX4Flow, 2 x IDS uEye SE (stereo configuration)<strong> , </strong>1
               x<strong> </strong>PointGrey FireFly-MV USB (bottom facing) <strong><br>
-              </strong></span> <span  style="font-family: LTAroma;"><strong>Rangefinder
-                :</strong> Lidar-Lite v1&nbsp;</span></p>
+              </strong></span> <span  style="font-family: LTAroma;"><strong>Laser
+                Scanner :</strong> Neato XV-11 Lidar <br>
+            </span></p>
           <p  style="height: 17px;"><span  style="font-family: LTAroma;"><br>
             </span> </p>
           <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">MAV1</span></span></h2>
