--- a/people.html
+++ b/people.html
@@ -49,11 +49,15 @@
           <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">Mohammed
                 Kabir</span></span></h2>
           <br>
-          <img  alt=""  src="images/content/kabir.jpg"> <br>
+          <img  style="width: 323px; height: 323px;"  alt=""  src="images/content/kabir.jpg"><br>
+          <h2><span  style="font-family: LTAroma;"><span  style="color: rgb(102, 102, 102);">Jonathan
+                Parrot</span></span></h2>
+          <br>
+          <img  style="width: 323px; height: 412px;"  alt=""  src="images/content/jono.jpg"><br>
+          <br>
         </section>
       </div>
     </div>
     <span  style="font-family: LTAroma;"> </span>
-    
   </body>
 </html>
