Add some images

--- a/technical.html
+++ b/technical.html
@@ -53,14 +53,15 @@
               derivative. The middleware of choice on the high-level companion
               computer is ROS (Robot Operating System) and the PX4 Middleware on
               the deeply embedded controller.</span></p>
-          <p><br>
-          </p>
+          <img  alt=""  src="images/content/control.png"><br>
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Hardware</span></h2>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Computing</span></h3>
           <p><span  style="font-family: LTAroma;">We have tested several onboard
-              computing solutions, with varying <br>
+              computing solutions, with varying levels of compute capability.<br>
             </span></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Vision</span></h3>
+          <img  alt=""  src="images/content/cameras.png">
+          <p></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Flight
               Control<br>
             </span></h3>
