--- a/gallery.html
+++ b/gallery.html
@@ -48,17 +48,18 @@
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102);">MAV2</span></h2>
           <p>MAV2 is the current-generation development prototype. It carries an
             Intel Core i7 Skylake-series NUC.</p>
+          <img  alt=""  src="images/gallery/mav2-r2.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
           <p>MAV1 was the first Artemis series vehicle to carry Intel x86
             computing onboard. It was powered by an Intel Core i5 NUC. </p>
-          <img  alt=""  src="images/content/mav1.jpg">
+          <img  alt=""  src="images/gallery/mav1.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV
               X</span></h2>
           MAV X was the very first among the Artemis MAVs. It had standard
           propulsion system, and carried an Odroid U3 and a Pixhawk autopilot
           board.<br>
           <br>
-          <img  alt=""  src="images/content/mavX.jpg"><br>
+          <img  alt=""  src="images/gallery/mavX.jpg"><br>
           <br>
           <br>
           <p><br>
