--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div>
       <div  class="inner clearfix">
         <section  id="main-content"> <br>
-          <img  alt=""  src="images/content/mav1.jpg"><span  style="font-family: LTAroma;"><br>
+          <img  alt=""  src="images/gallery/mav1.jpg"><span  style="font-family: LTAroma;"><br>
             <br>
           </span><span  style="font-family: LTAroma;"></span><span  style="font-family: LTAroma;"></span><span
              style="font-family: LTAroma;"></span> <span  style="font-family: LTAroma;"></span>
