--- a/technical.html
+++ b/technical.html
@@ -83,6 +83,7 @@
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Visual
               Navigation</span></h3>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Mapping</span></h3>
+          <img  alt=""  src="images/content/laser.png">
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Terrain
               Analysis</span></h3>
           <img  alt=""  src="images/content/mapping.png">
